--- a/Werkstuk/views/css/custom.css
+++ b/Werkstuk/views/css/custom.css
@@ -4,8 +4,9 @@
     /*height: 78px;*/
    background-color: #ECFAFF;
 }
-.well{
+#banner{
     background-color: #ECFAFF;
+
 }
 .error-label {
     color: red;
@@ -19,6 +20,10 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
 }
+
+/*.navbar-btn.checkbox{*/
+    /*padding-bottom:20pt;*/
+/*}*/
 
 /*fixed footer*/
 /*http://stackoverflow.com/questions/19756997/how-to-create-a-sticky-footer-that-plays-well-with-bootstrap-3 */
@@ -107,8 +112,8 @@ footer {
 }
 
 /*Admin/editProduct*/
-.dropdown,.form-control,.btn-default, input[type="radio"]{
-    margin-bottom: 2em;
+.dropdown,.form-control,.btn-default,.btn-primary, input[type="radio"], input[type="checkbox"]{
+    margin-bottom: 1.5em;
 }
 /*Admin/deleteProduct*/
 .img-rounded{
