added client side validation for product insert

--- a/Werkstuk/views/css/custom.css
+++ b/Werkstuk/views/css/custom.css
@@ -11,6 +11,10 @@
 .error-label {
     color: red;
 }
+.error{
+    border-color: red;
+}
+
 body {
     padding-top: 80px; /* padding voor .navbar-fixed-top.*/
     background-color: #FEFDFF;
