--- a/Werkstuk/views/css/custom.css
+++ b/Werkstuk/views/css/custom.css
@@ -16,20 +16,6 @@
     border-color: red;
 }
 
-body {
-    padding-top: 80px; /* padding voor .navbar-fixed-top.*/
-    background-color: #FEFDFF;
-    font-family: 'Annie Use Your Telescope';
-    font-size: 22px;
-    font-weight: 400;
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
-
-/*.navbar-btn.checkbox{*/
-    /*padding-bottom:20pt;*/
-/*}*/
-
 /*fixed footer*/
 /*http://stackoverflow.com/questions/19756997/how-to-create-a-sticky-footer-that-plays-well-with-bootstrap-3 */
 html {
@@ -41,8 +27,22 @@ html {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 60px;
+    height: 50px;
     background-color: #f5f5f5;
+}
+
+body {
+    padding-top: 80px; /* padding voor .navbar-fixed-top.*/
+    background-color: #FEFDFF;
+    font-family: 'Annie Use Your Telescope';
+    font-size: 22px;
+    font-weight: 400;
+    /* Margin bottom by footer height */
+    margin-bottom: 100px;
+}
+
+.panel-default .row{
+    padding-top: 10px;
 }
 
 /*
